--- a/home.html
+++ b/home.html
@@ -83,11 +83,11 @@
 </head>
 <body>
     <div class="container">
-        <img src="./pictures /make-me-a-simple-logo-similar-hexagonal-to-this-for-my-application-named-compliance-nexus-logo-sh-8332 (1).png" alt="Logo">
+        <img src="./PICTURE/make-me-a-simple-logo-similar-hexagonal-to-this-for-my-application-named-compliance-nexus-logo-sh-8332 (1).png" alt="Logo">
         <h1>Welcome to Compliance Nexus</h1>
         
         <div class="button-container">
-            <button onclick="location.href='LOGIN.html'">Login</button>
+            <button onclick="location.href= 'LOGIN.HTML'">Login</button>
             <button onclick="location.href='register.html'">Register/Signup</button>
         </div>
 
