--- a/PAGES/profile.html
+++ b/PAGES/profile.html
@@ -15,7 +15,7 @@
     
         <ul class="nav-links">
             <i class="uil uil-times navCloseBtn"></i>
-           <a href="./home.html"><li><button class="nbtn" type="button" href="#">Home</button></li><a>
+           <a href="home.html"><li><button class="nbtn" type="button" href="#">Home</button></li><a>
            <a href="./profile.html" > <li><button class="nbtn" type="button" href="#">Profile</button></li><a>
            <a href="./actspage.html" ><li><button class="nbtn" type="button" href="./actspage.html">Acts</button></li><a>
            <a href="updates_page.html" ><li><button class="nbtn" type="button" href="./updates_page.html">Updates</button></li><a>
